--- a/QuNaAPP/travel2/package.json
+++ b/QuNaAPP/travel2/package.json
@@ -11,10 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "define-properties": "^1.1.3",
     "fastclick": "^1.0.6",
+    "has": "^1.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
